:rotating_light: fix: add baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 title: 💻✒️📄🌟
 description: Sergio Valero García's CV
+baseurl: /cv
 repository: sergiovalerogarcia/cv
 github: [metadata]
