:sparkles: feat: update cv content

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: 💻✒️📄🌟
+title: 💻📚🌱🏳️‍🌈💃
 description: Sergio Valero García's CV
 baseurl: /cv
 repository: sergiovalerogarcia/cv
